Compiler/tests/good/set1.nx
type a = [0 .. 10];

type t = a;

val x : t = 3;

printn(x);
